--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- SECCION NAVEGACIÓN-->
   <nav class="navbar navbar-dark bg-primary navbar-expand-md fixed-top">
-    <div class="container">      
+    <div class="container-fluid">      
       <a href="#" class="navbar-brand">
        <h2>Henry Moreno </h2>
       </a>
@@ -47,7 +47,7 @@
           ¿Quien soy?</a>
         </li>
         <li class="nav-item"><a href="#Habilidades" class="nav-link active">
-          habilidades</a></li>
+          Habilidades</a></li>
         <li class="nav-item"><a href="#Proyectos" class="nav-link active">
           Proyectos</a></li>
           <li class="nav-item"><a href="#Contactos" class="nav-link active">
@@ -94,7 +94,7 @@
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 ">
 <div class="  d-flex justify-content-around">
   <div class="p-4 text-justify text-capitalize" >
-    <h2>Skills:</h2>
+    <h2>Habilidades:</h2>
     <h5>_JavaScritp</h5>
     <h5>_TypeScript</h5>
     <h5>_React</h5>
@@ -106,22 +106,9 @@
     <h5>_Postgresql</h5>
     <h5>_Sequelize</h5>
     <h5>_Express</h5>
-    <h5>_SQLServer</h5>
+    <h5>_SQL</h5>
 
   </div>
-  <div class="p-4 text-justify text-capitalize">
-  <h2>Soft Skills:</h2>
-  <h5>__Responsable</h5>
-  <h5>_Comprometido</h5>
-  <h5>_Autodidacta</h5>
-  <h5>_Jugador en Equipo</h5>
-  <h5>_Adaptable</h5>
-  <h5>_Resolucion de problemas</h5>
-  <h5>_Proactivo</h5>
-  <h5>_Buen Comunicador</h5>
-  <h5>_Sociable</h5>
-  <h5>_Me gusta Ayudar</h5>
-</div>
 </div>
     </div>
   </div>
@@ -146,7 +133,7 @@
               los componentes fueron renderizados con CSS puro, sin usar librerías adicionales.
               El proyecto consumía los datos de una API externa a través del back-end desarrollado con Node.JS usando Express. 
                 Y el mismo también hacia uso de una DB generada con Postgresql.</p>
-            <a href="https://ws-videogame-app.vercel.app/" class="btn btn-outline-primary" target="_blank">Ver Deploy</a>
+            <a href="https://ws-videogame-app.vercel.app/" class="btn btn-outline-primary" target="_blank">Ver Demo</a>
             <a href="https://github.com/21006263/ws-videogame-app" class="btn btn-outline-secondary" target="_blank">Ver github </a>
           
           </div>
@@ -159,7 +146,7 @@
             <h5 class="card-title">Proyecto 2</h5>
             <p class="card-text text-justify">
               Proyecto de practicas y estudios Personal, Fue constituido en Nodejs and Mongodb (https://www.mongodb.com/) , El mismo tiene como funcionalidad,filtros como: agregar tareas, editar, eliminar y actualizar. Las tecnologia utilizadas o en su efecto requeridas para la DEMO app: html,cdn de bootstrap, Node y mongodb</p>
-            <a href="https://tasks-app-crud-nodejs.herokuapp.com/" class="btn btn-outline-primary" target="_blank">Ver Deploy</a>
+            <a href="https://tasks-app-crud-nodejs.herokuapp.com/" class="btn btn-outline-primary" target="_blank">Ver Demo</a>
            
             <a href="https://github.com/21006263/Practicas_tareas" class="btn btn-outline-secondary" target="_blank">Ver github </a>
           </div>
@@ -176,8 +163,8 @@
               Y por ultimo pero no menos importante, este mismo Portfolio, que me permitió hacer uso de diversas
               herramientas como Bootstrap, el manejo de un proyecto Responsive, el uso de diversas fuentes de Google-font 
               y el uso de animaciones obtenidas de AOS Animate Scroll Library</p>
-            <a href="https://tasks-app-crud-nodejs.herokuapp.com/" class="btn btn-outline-primary" target="_blank">Ver Deploy</a>
-            <a href="https://github.com/21006263/Practicas_tareas" class="btn btn-outline-secondary" target="_blank" >Ver github</a>
+            <a href="https://21006263.github.io/Ws-App/" class="btn btn-outline-primary" target="_blank">Ver Demo</a>
+            <a href="https://github.com/21006263/Ws-App" class="btn btn-outline-secondary" target="_blank" >Ver github</a>
           </div>
         </div>
       </article>
@@ -187,17 +174,19 @@
 <hr>
 
 <div id = "Contactos" class ="contact">
-  <h3>Medios de contacto:</h3>
-  <h5>En Linkedin soy: <a target = "black" href = "https://www.linkedin.com/in/henry-moreno-gs/"><i> 
+  <h3>Contactos:</h3>
+ 
+  <h5>Linkedin: <a target = "black" href = "https://www.linkedin.com/in/henry-moreno-gs/"><i> 
     henry-moreno-gs   
    </i></a></h5>
-  <h5>En Github soy: <a target = "black" href = "https://github.com/21006263"><i>   
+  <h5>Github: <a target = "black" href = "https://github.com/21006263"><i>   
     21006263  
   </i></a></h5>
-  <h5>Mi e-mail: hmorenosifontes@gmail.com</h5>
-  <h5>Mi e-mail2: hmorenosifontes@hotmail.com</h5>
-  <h5>Mi wtsp: +584145888298</h5>
-  <button  href="./images/" class="btn btn-outline-info">Descargar-cv </button>
+  <h5> E-mail: hmorenosifontes@gmail.com</h5>
+  <h5> Telefono: +584145888298</h5>
+    <a class="btn btn-outline-info" href="./images/Henry.pdf" target="_blank" rel="noopener">DESCARGAR CV</a>
+ 
+ 
   <hr>
 </div>
 
