--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               Y por ultimo pero no menos importante, este mismo Portfolio, que me permitió hacer uso de diversas
               herramientas como Bootstrap, el manejo de un proyecto Responsive, el uso de diversas fuentes de Google-font 
               y el uso de animaciones obtenidas de AOS Animate Scroll Library</p>
-            <a href="https://21006263.github.io/ws-henry/" class="btn btn-outline-primary" target="_blank">Ver Demo</a>
+            <a href="https://github.com/21006263/ws-henry" class="btn btn-outline-primary" target="_blank">Ver Demo</a>
             <a href="https://github.com/21006263/ws-henry" class="btn btn-outline-secondary" target="_blank" >Ver github</a>
           </div>
         </div>
