--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       </div>
       <div class="col-12 col-md-6 text-center text-md-left align-self-md-center ">
         <h1 class="display-4 font-weight-bold text-primary animate__animated animate__heartBeat">¿Quien soy?</h1> 
-        <p>¡Hola!, Soy Henry Moreno. Una persona proactiva, organizada y responsable, con habilidad para generar buenos vínculos interpersonales. Siempre estoy en búsqueda de nuevos desafíos y capacitándome para mejorar mis habilidades.</p> 
+        <p>¡Hola!, Soy Henry Moreno. Una persona proactiva, organizada y con habilidad para generar buenos vínculos interpersonales.
+          Siempre estoy en búsqueda de nuevos desafíos y capacitándome para mejorar mis habilidades.</p> 
       </div>
     </div>
   </div>
