--- a/index.html
+++ b/index.html
@@ -176,16 +176,12 @@
 
 <div id = "Contactos" class ="contact">
   <h3>Contactos:</h3>
- 
-  <h5>Linkedin: <a target = "black" href = "https://www.linkedin.com/in/henry-moreno-gs/"><i> 
-    henry-moreno-gs   
-   </i></a></h5>
   <h5>Github: <a target = "black" href = "https://github.com/21006263"><i>   
     21006263  
   </i></a></h5>
   <h5> E-mail: hmorenosifontes@gmail.com</h5>
   <h5> Telefono: +584145888298</h5>
-    <a class="btn btn-outline-info" href="./images/Henry.pdf" target="_blank" rel="noopener">DESCARGAR CV</a>
+    <a class="btn btn-outline-info" href="./images/CV_HENRY.pdf" target="_blank" rel="noopener">DESCARGAR CV</a>
  
  
   <hr>
